🚛 Implement comprehensive haul ticket system - Added detailed haul ticket components for driver and dispatch views - Integrated comprehensive data including route info, measurements, safety status - Implemented role-based dashboard with navigation tabs - Added extensive mock data for realistic oil field operations - Enhanced glassmorphism styling with professional UI - Added comprehensive CSS for haul ticket layouts - Implemented responsive design for mobile compatibility - Added role selector component for switching between views - Enhanced navigation with role-specific tab systems - Added proper status indicators and action buttons

--- a/src/app.html
+++ b/src/app.html
@@ -4,9 +4,11 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>DryDrive - Oil Field Temperature Tracker</title>
+		<meta name="description" content="Professional oil field temperature tracking and fleet management system" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-gradient-to-br from-slate-50 via-blue-50 to-emerald-50 min-h-screen">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
