VeriHaul rebrand with reduced header

--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>DryDrive - Oil Field Temperature Tracker</title>
-		<meta name="description" content="Professional oil field temperature tracking and fleet management system" />
+		<title>VeriHaul - Oil Field Temperature Tracker</title>
+		<meta name="description" content="VeriHaul - Professional oil field temperature tracking and fleet management system powered by DryDrive" />
 		<!-- Add Inter font from Google Fonts for consistency -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
